...
    <RelativeLayout
        android:id="@+id/dateContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/colormap_title_margin">
        <TextView
            android:id="@+id/start_date"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@id/end_date"
            android:layout_alignParentEnd="true"
...
