<resources>
    <string name="app_name">Terraview</string>
    <string name="layers">Layers</string>
    <string name="layers_nav">Layers - Swipe to left to delete</string>
    <string name="layer_info">Layer Info</string>
    <string name="about">About</string>
    <string name="date">Change Date</string>
    <string name="about_html"><![CDATA[
        <!DOCTYPE html>
        <html lang=\'en\'>
            <head>
                <title></title>
                <meta charset=\"UTF-8\"></meta>
                <style> body { font-family: sans-serif; } pre { background-color: #eeeeee; padding: 1em; white-space: pre-wrap; } </style>
            </head>
            <body>
                <h3>Terraview</h3>
                <pre>Terraview is a REST client for NASA\'s <a href=\"https://earthdata.nasa.gov/gibs\">Global Imagery Browse Services</a> (GIBS).
                GIBS is a public API providing access to satellite data and imagery from the EOS and A-Train satellites.
                While this application is not directly related to NASA\'s <a href=\"https://worldview.earthdata.nasa.gov/\">Worldview</a>,
                I worked on improvements on the project in an internship in NASA\'s Goddard Space Flight Center and created this based on the idea a better interface could be made for mobile devices.
                </pre>
                <h3>Acknowledgements</h3>
                <ul><li>NASA GIBS</li></ul>
                <pre>We acknowledge the use of imagery provided by services from the Global Imagery Browse Services (GIBS), operated by the NASA/GSFC/Earth Science Data and Information System (ESDIS, <a href=\"https://earthdata.nasa.gov\">https://earthdata.nasa.gov</a>) with funding provided by NASA/HQ.</pre>
                <ul><li>Worldview</li></ul>
                <pre>This application uses metadata from NASA\'s Worldview, which is licensed under the <a href=\"https://worldview.earthdata.nasa.gov/pages/license.html\">NASA Open Source Software Agreement, Version 1.3</a>. Source code is available on <a href=\"https://github.com/nasa-gibs/worldview\">github</a>.</pre>
                <ul><li>Android Asset Studio</li></ul>
                <pre>Application icon made with the use of <a href=\"https://romannurik.github.io/AndroidAssetStudio\">Android Asset Studio</a>, licensed under <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0</a>.</pre>
                <h3>License</h3>
                <pre>The MIT License (MIT) <br />Copyright
                © 2017 Edmond Lee <br /><br />Permission
                is hereby granted, free of charge, to any person obtaining a copy
                of this software and associated documentation files (the \"Software\"), to deal
                in the Software without restriction, including without limitation the rights
                to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
                copies of the Software, and to permit persons to whom the Software is
                furnished to do so, subject to the following conditions: <br /><br />The
                above copyright notice and this permission notice shall be included in
                all copies or substantial portions of the Software. <br /><br />THE
                SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
                IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
                FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
                AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
                LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
                OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
                THE SOFTWARE.</pre>
            </body>
        </html>
    ]]></string>
    <string name="faq"><![CDATA[
        <!DOCTYPE html>
        <html lang=\'en\'>
            <head>
                <title></title>
                <meta charset=\"UTF-8\"></meta>
                <style> body { font-family: sans-serif; } pre { background-color: #eeeeee; padding: 1em; white-space: pre-wrap; } </style>
            </head>
            <body>
                <h3>Why is the Google logo shown at the bottom?</h3>
                <pre>Simply because the app uses the Google Maps API and the logo is part of the map view. No map tiles are used from Google Maps however.
                </pre>
                <h3>How does this app differ from Worldview?</h3>
                <pre>NASA Worldview is the default client for NASA GIBS, which provides access to all available satellite imagery and data from NASA. Terraview is also a
                    GIBS client, and so in this respect it does not differ from Worldview because both are HTTP REST clients.

                    <br /><br />Terraview however is built for mobile devices that run Android and therefore takes advantage of the components and libraries available to the Android platform. It uses material design elements such as the toolbar,
                    but to maximize the size of the map the app menu is hidden in the left hand drawer while the layer controls are in the right hand drawer. It may also download and store data into its internal app data storage
                    to quickly load all the layer metadata the next time the application is started up. This is all done natively in Android by using the Google Maps API, as opposed to Worldview having to work in a browser environment and may not function well for all devices.

                    <br /><br />Some elements from Worldview do not translate to mobile computing easily and therefore are done differently in Worldview. Choosing layers is done in a different screen for example.
                    The timeline does not serve as an intuitive date picker for most people, so a calendar date picker is used.
                </pre>
                <h3>Why do some layers not show up?</h3>
                <pre>All layers have a start date while some also have an end date. Choosing a date before a layer\'s start date or after a layer\'s end date will result in no data or imagery for that layer.
                    You can check these dates at the Layer Info menu option. In particular, all AMSR-E layers are from 2002 to 2011, and VIIRS and AMSR2 layers start at 2015.

                    <br /><br />Some layers that do not have an end date are delayed by a day, meaning if you choose the day before today, the layer may be visible but not for today. So far this has been verified with the SMAP and GHRSST layers.
                </pre>
                <h3>Why are layers available in Worldview not here?</h3>
                <pre>Terraview uses the Google Maps API which displays the map in a Mercator projection which distorts objects in the map so objects further from the equator look bigger than they are to preserve their shape in a rectangle surface.
                    The layers displayed in Worldview are in a different projection that does not distort objects but cannot be viewed directly with Google Maps. Not all GIBS layers support the Mercator projection such as the Fires and Thermal Anomalies layers, but a large number are.
                </pre>
                <h3>How does a colorbar work?</h3>
                <pre>Many layers are data overlays that represent a measurement. In the Layer info menu option, you can see a visual of the colorbar,
                    which represents the range of values of that measurement. At both ends are text that tell you the minimum and maximum value as well as the units, if any.
                </pre>
                <h3>How does an animation work</h3>
                <pre>Animations are done in Worldview, the dialog in here allows you to configure the animation before it opens the default web browser (or allow you to copy the URL if shared).
                    Note that only tablets support viewing the animation because it gets the Desktop rather than the mobile version of Worldview, for phones the URL needs to be shared or save elsewhere.
                </pre>
            </body>
        </html>
    ]]></string>
    <string name="internet">Turn on connection to get data</string>
    <string name="colormap_info">Colormap Information</string>
    <string name="layer_settings">Layer Settings</string>
    <string name="colormap_none">No color map available</string>
    <string name="animation">Create Animation</string>
    <string name="animate">Animate</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="speed">Speed</string>
    <string name="interval">Interval</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="options">Options</string>
    <string name="loop">Loop</string>
    <string name="save">Save to GIF</string>
    <string name="make_animation">New Animation</string>
    <string name="anim_warning">Start and end cannot be empty</string>
    <string name="anim_warning_before">Start must come before end</string>
    <string name="anim_warning_open">No layers to animate, add some layers!</string>
    <string name="end_hint">Set end date</string>
    <string name="feedback">Send Feedback</string>
    <string name="email" translatable="false">edmondlee.dev@gmail.com</string>
    <string name="email_subject">Terraview - Feedback</string>
    <string name="search_hint">Type a layer to add</string>
    <string name="search">Search</string>
    <string name="faq_title">FAQ</string>
    <string name="help">App Tour</string>
    <string name="tour_new">New to Terraview?</string>
    <string name="start_tour">Start Tour</string>
    <string name="tour_start">Terraview tour</string>
    <string name="tour_start_sub">Tap here to start</string>
    <string name="tour_menu">The Main Menu</string>
    <string name="tour_menu_desc">Choose layers, see layer info, set the date</string>
    <string name="tour_menu_ctrls_title">Right swipe for layer controls</string>
    <string name="tour_menu_ctrls_desc">Hide, swap, or swipe away layers</string>
    <string name="tour_end">You reached the end of the tour. Enjoy!</string>
    <string name="share">Share</string>
    <string name="share_url">Share or copy animation URL</string>
    <string name="about_github">Terraview on Github</string>
    <string name="events">Events</string>
    <string name="categories">Categories</string>
    <string name="measurements">Measurements</string>
    <string name="closed">Closed: %1$s</string>
    <string name="ongoing">Ongoing</string>
    <string name="no_source">Sorry, no source available</string>
    <string name="closed_toggle">Past</string>
    <string name="open_toggle">Ongoing</string>
    <string name="start_warning">One or more layers have no data for this date</string>
    <string name="fix">Fix</string>
    <string name="event_date">Changed date to %1$s</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_ver"><![CDATA[
        <b>Terraview</b><br>
        Version %s
    ]]></string>
    <string name="about_data">Terraview does not store or send any Personally Identifiable Information (PII) to external sources,
        nor does it generate or send any analytical application information.
    </string>
</resources>
