<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/anim_start"
        android:title="@string/animate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/anim_url"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>