<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_layers"
    android:background="#eeeeee"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:fitsSystemWindows="true"
    app:itemTextColor="@color/abc_primary_text_material_light">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:text="@string/layers_nav"
        style="?android:listSeparatorTextViewStyle" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/layer_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize" />
</android.support.design.widget.NavigationView>
