<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/thelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/tool_bar"/>
        <fragment
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.iamtechknow.terraview.map.WorldActivity" />
    </android.support.design.widget.CoordinatorLayout>
    <!-- Navigation menu view -->
    <include layout="@layout/nav_left" />

    <!-- Nav view for selecting layers -->
    <include layout="@layout/nav_layers" />
</android.support.v4.widget.DrawerLayout>
